--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "gatsby-link": "^2.0.1",
     "gatsby-plugin-create-client-paths": "^2.0.3",
     "gatsby-plugin-layout": "^1.0.2",
+    "gatsby-plugin-netlify": "^2.0.6",
     "gatsby-plugin-netlify-identity-widget": "^1.1.1",
     "gatsby-plugin-react-helmet": "^3.0.0",
     "gatsby-plugin-sharp": "^2.0.5",
