--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "1.0.0",
   "author": "Brian Holt <btholt+course-starter@gmail.com>",
   "dependencies": {
+    "@u-wave/react-vimeo": "^0.6.0",
     "bootstrap": "^4.1.3",
     "code-mirror-themes": "^1.0.0",
     "gatsby": "^2.0.9",
@@ -24,7 +25,8 @@
     "prismjs": "^1.15.0",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
-    "react-helmet": "^5.2.0"
+    "react-helmet": "^5.2.0",
+    "react-vimeo": "^2.0.0"
   },
   "keywords": [
     "gatsby",
