--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "version": "1.0.0",
   "author": "Brian Holt <btholt+course-starter@gmail.com>",
   "dependencies": {
+    "@mdx-js/mdx": "^0.16.6",
+    "@mdx-js/tag": "^0.16.6",
     "@u-wave/react-vimeo": "^0.6.0",
     "bootstrap": "^4.1.3",
     "code-mirror-themes": "^1.0.0",
     "gatsby": "^2.0.9",
     "gatsby-cli": "^2.4.1",
     "gatsby-link": "^2.0.1",
+    "gatsby-mdx": "^0.3.2",
     "gatsby-plugin-create-client-paths": "^2.0.3",
     "gatsby-plugin-layout": "^1.0.2",
     "gatsby-plugin-netlify": "^2.0.6",
