--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "gatsby-remark-prismjs": "^3.0.0",
     "gatsby-source-filesystem": "^2.0.1",
     "gatsby-transformer-remark": "^2.1.3",
+    "mdx-utils": "^0.0.2",
+    "prism-react-renderer": "^0.1.5",
     "prismjs": "^1.15.0",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
